[package]
name = "rtimer"
version = "0.2.0"
edition = "2021"
authors = ["freet-bash@qq.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
regex = "1.10.3"
rodio = { version = "0.17.3", features = ["mp3"] }
chrono = "0.4.33"
subprocess = "0.2.9"
