[package]
name = "rtimer"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A tool for timer, a tip? or a cmd."
homepage = "https://github.com/freetbash/rtimer"
repository = "https://github.com/freetbash/rtimer"
documentation = "https://github.com/freetbash/rtimer"
readme = "README.md"
authors = ["freet-bash@qq.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
regex = "1.10.3"
rodio = { version = "0.17.3", features = ["mp3"] }
chrono = "0.4.33"
subprocess = "0.2.9"
