[package]
name = "rtimer"
version = "1.2.0"
edition = "2021"
license = "MIT"
description = "A tool for timer, a tip? or a cmd."
homepage = "https://github.com/fb0sh/rtimer"
repository = "https://github.com/fb0sh/rtimer"
documentation = "https://github.com/fb0sh/rtimer"
readme = "README.md"
authors = ["fb0sh@outlook.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
regex = "1.10.3"
rodio = { version = "0.17.3", features = ["mp3"] }
chrono = "0.4.33"
subprocess = "0.2.9"
